// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component renders empty breadcrumbs 1`] = `
<body>
  <div>
    <nav
      aria-label="Breadcrumb"
      class="Breadcrumbs"
      data-test="DesignSystem-Breadcrumbs"
    />
  </div>
</body>
`;

exports[`Breadcrumbs component renders four links 1`] = `
<body>
  <div>
    <nav
      aria-label="Breadcrumb"
      class="Breadcrumbs"
      data-test="DesignSystem-Breadcrumbs"
    >
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          aria-disabled="false"
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level0"
          role="link"
          tabindex="0"
        >
          <span
            class="Link-wrapper"
          >
            Level 0 check for truncate after 160px
          </span>
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          aria-disabled="false"
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level1"
          role="link"
          tabindex="0"
        >
          <span
            class="Link-wrapper"
          >
            Level 1
          </span>
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          aria-disabled="false"
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level2"
          role="link"
          tabindex="0"
        >
          <span
            class="Link-wrapper"
          >
            Level 2
          </span>
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          aria-disabled="false"
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level3"
          role="link"
          tabindex="0"
        >
          <span
            class="Link-wrapper"
          >
            Level 3
          </span>
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
    </nav>
  </div>
</body>
`;

exports[`Breadcrumbs component renders with custom className 1`] = `
<body>
  <div>
    <nav
      aria-label="Breadcrumb"
      class="Breadcrumbs My-custom-style"
      data-test="DesignSystem-Breadcrumbs"
    />
  </div>
</body>
`;
